Fixed Project page picture centering on FireFox.

--- a/src/less/projects.less
+++ b/src/less/projects.less
@@ -133,6 +133,7 @@ div#nioStabilityWrapper {
 
 div#quoteBuilderPic {
   width: fit-content;
+  width: -moz-fit-content;
   margin: auto;
 }
 
